# get_nominatim_info

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  get_nominatim_info.cpp  get_nominatim_info.sln  makefile
get_nominatim_info/: Source.cpp  get_nominatim_info.sln  get_nominatim_info.vcxproj  get_nominatim_info.vcxproj.filters  records.json
get_nominatim_info.vcxproj/: get_nominatim_info.vcxproj
jsoncons/: json1.hpp  json2.hpp  json_deserializer.hpp  json_filter.hpp  json_input_handler.hpp  json_output_handler.hpp  json_reader.hpp  json_serializer.hpp  json_structures.hpp  json_type_traits.hpp  jsoncons.hpp  jsoncons_config.hpp  output_format.hpp  parse_error_handler.hpp
python/: get_gmaps.py  get_nominatim.py
scripts/: multi_run.ps1  multi_run.sh
src/: get_nominatim_info.cpp
